examples/test/testpolicy16854.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16854
  namespace: namespace152
spec:
  podSelector:
    matchLabels:
      key36: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value36
          key37: value20
          key0: value3
      podSelector:
        matchLabels:
          key12: value35
          key0: value37
          key27: value5
